# uwrt_mars_rover_hw_bridge

./: CMakeLists.txt  README.md  hwbridgefile  makefile  package.xml
can/: CANAutogenWrapper.cpp  CANAutogenWrapper.h  CANMsgMap.cpp  CANMsgMap.h  uwrt_mars_rover_can.yaml  uwrt_mars_rover_can_2021.yaml  uwrt_mars_rover_can_2022.yaml
can/generated_2021/: uwrt_mars_rover_can.c  uwrt_mars_rover_can.dbc  uwrt_mars_rover_can.h  uwrt_mars_rover_can_dump.txt  uwrt_mars_rover_can_enums.h  uwrt_mars_rover_can_wrapper.cpp  uwrt_mars_rover_can_wrapper.h
can/generated_2022/: uwrt_mars_rover_can.c  uwrt_mars_rover_can.dbc  uwrt_mars_rover_can.h  uwrt_mars_rover_can_dump.txt  uwrt_mars_rover_can_enums.h  uwrt_mars_rover_can_wrapper.cpp  uwrt_mars_rover_can_wrapper.h
config/: hw_bridge.cpp  hw_bridge.h
include/: hw_bridge.h
include/uwrt_mars_rover_hw_bridge/: hw_bridge.h
include/uwrt_mars_rover_utils/: hw_bridge.h
scripts/: can_code_generation.py  generate_can.py  generate_can_enums.py  generate_can_wrapper.py
src/: hw_bridge.cpp
