<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uwrt_mars_rover_hw_bridge</name>
  <version>0.0.0</version>
  <description>Bridges the gap between the UWRT firmware and software repositories</description>
  <maintainer email="omarmon@uwaterloo.ca">Orson Marmon</maintainer>
  <license>MIT</license>

  <author email="omarmon@uwaterloo.ca">Orson Marmon</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
